--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,15 @@
 
   <dependencies>
   	<dependency>
+	    <groupId>commons-lang</groupId>
+    	<artifactId>commons-lang</artifactId>
+    	<version>2.3</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	
+  	<!-- testing dependencies -->
+	<dependency>
   		<groupId>org.testng</groupId>
   		<artifactId>testng</artifactId>
   		<version>5.12.1</version>
@@ -23,9 +32,16 @@
   		<scope>test</scope>
   	</dependency>
   	<dependency>
-	    <groupId>commons-lang</groupId>
-    	<artifactId>commons-lang</artifactId>
-    	<version>2.3</version>
+  		<groupId>org.hamcrest</groupId>
+  		<artifactId>hamcrest-all</artifactId>
+  		<version>1.1</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.jbehave</groupId>
+  		<artifactId>jbehave-core</artifactId>
+  		<version>3.0</version>
   		<type>jar</type>
   		<scope>compile</scope>
   	</dependency>
