--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<scm>
+		<connection>scm:git:git@github.com:sudr/dougs.git</connection>
+		<url>scm:git:git@github.com:tobrien/git-demo.git</url>
+		<developerConnection>scm:git:git@github.com:tobrien/git-demo.git</developerConnection>
+	</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -43,7 +49,7 @@
 			<artifactId>junit</artifactId>
 			<version>4.8.1</version>
 			<type>jar</type>
-			 <scope>test</scope> 
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -58,16 +64,21 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			 <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <includes>
-                        <include>**/*OperateDoor.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<includes>
+						<include>**/*OperateDoor.java</include>
+					</includes>
+				</configuration>
+			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.0</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
